--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,16 +5,22 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-trigger:
-- main
+stages:
+- stage: A
+  jobs:
+  - job: extractDbAndUploadToAzureBlob
+    pool:
+      name: Nodepool
+      demands:
+        - agent.name -equals uat_simulation_agent
+    steps:
+    - task: PowerShell@2
+      inputs:
+        filePath: './db_env_managment_scripts/export_db_to_bacpac.ps1'
+    - task: PowerShell@2
+      inputs:
+        filePath: 'db_env_managment_scripts/upload_bacpac_to_azureblob.ps1'
 
-pool: Nodepool
+         
 
 
-steps:
-- task: PowerShell@2
-  inputs:
-    filePath: './db_env_managment_scripts/export_db_to_bacpac.ps1'
-- task: PowerShell@2
-  inputs:
-    filePath: 'db_env_managment_scripts/upload_bacpac_to_azureblob.ps1'
