--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,8 @@
-
+variables:
+- name: extract_db_path
+  value: "C:/Bacpacs/" 
+- name: db_name
+  value: "db_dev_1.bacpac"
 
 stages:
 - stage: setUpEnvironments
@@ -36,6 +40,7 @@ stages:
     steps:
     - task: PowerShell@2
       inputs:
+        arguments: '${{variables.extract_db_path}} ${{variables.db_name}}'
         filePath: './db_env_managment_scripts/export_db_to_bacpac.ps1'
     - task: PowerShell@2
       inputs:
