--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,9 +29,9 @@ stages:
         filePath: './db_env_managment_scripts/install_env_dependencies.ps1'
     
 
-- stage: uatBacpacToAzureBlob
+- stage: VM_A database to Azure Storage
   jobs:
-  - job: extractDbAndUploadToAzureBlob
+  - job: extract_and_upload
     timeoutInMinutes: 360
     pool:
       name: Nodepool
@@ -41,7 +41,7 @@ stages:
     - task: PowerShell@2
       inputs:
         arguments: '${{variables.extract_db_path}} ${{variables.db_name}}'
-        filePath: './db_env_managment_scripts/export_db_to_bacpac.ps1'
+        filePath: './db_env_managment_scripts/export_db.ps1'
     - task: PowerShell@2
       inputs:
         filePath: 'db_env_managment_scripts/upload_bacpac_to_azureblob.ps1'
