Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,12 @@
 variables:
 - name: extract_db_path
   value: "C:/Bacpacs/" 
+
 - name: db_name
   value: "db_dev_1.bacpac"
+
+- name: blob_url
+  value: "https://apsiaem01ada09a20ec1a713.blob.core.windows.net/retail-cdx-down-68719476736?sp=racwdli&st=2022-10-19T10:51:08Z&se=2023-02-02T19:51:08Z&spr=https&sv=2021-06-08&sr=c&sig=kiGgyozma%2FZWom%2BtWz%2F7ynf8rEoXCn3XP5DjigiS65Q%3D"
 
 stages:
 - stage: setUpEnvironments
@@ -44,7 +48,7 @@ stages:
         filePath: './db_env_managment_scripts/export_db.ps1'
     - task: PowerShell@2
       inputs:
-        filePath: 'db_env_managment_scripts/upload_bacpac_to_azureblob.ps1'
+        filePath: 'db_env_managment_scripts/upload_db.ps1'
 
 - stage: bacpacFromAzureToTier1Import
   jobs:
