--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,9 @@ variables:
   value: 360
 
 stages:
-- stage: setUpEnvironments
+- stage: Set_environments
   jobs:
-  - job: setUpUAT
+  - job: set_VmA
     timeoutInMinutes: ${{variables.jobs_timeout}}
     pool:
       name: Nodepool
@@ -35,8 +35,8 @@ stages:
     steps:
     - task: PowerShell@2
       inputs:
-        filePath: 'db_env_managment_scripts/install_env_dependencies.ps1'
-  - job: setUpTier1
+        filePath: 'db_env_managment_scripts/set_environments.ps1'
+  - job: set_VmB
     timeoutInMinutes: ${{variables.jobs_timeout}}
     pool:
       name: Nodepool
