--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,38 @@
 variables:
+# Path where db .bacpac will be extracted from VmA 
 - name: extract_db_path
   value: "C:/Bacpacs/" 
 
+# Path where db .bacpac will be  downloaded from VmB
 - name: download_db_path
   value: "C:/downloadedBacpacs/"
 
+# Name of the file with extension type that will be extracted, uploaded and downloaded
 - name: db_name
   value: "db_dev_1.bacpac"
 
+# Uri of Azure storage blob where the file will be uploaded and downlaoded 
 - name: blob_url
   value: "https://apsiaem01ada09a20ec1a713.blob.core.windows.net/retail-cdx-down-68719476736?sp=racwdli&st=2022-10-19T10:51:08Z&se=2023-02-02T19:51:08Z&spr=https&sv=2021-06-08&sr=c&sig=kiGgyozma%2FZWom%2BtWz%2F7ynf8rEoXCn3XP5DjigiS65Q%3D"
 
+# Name of the new db that will be created on Vm_B to import the .bacpac
 - name: sql_db_name
   value: "AxDB_updated"
 
+# Name of agent installed on VmA
 - name: agent_A
   value: "uat_simulation_agent"
 
+# Name of agent installed on VmB
 - name: agent_B
   value: "tier1_agent"
 
+# Timeout after which the pipeline will be interrupted
 - name: jobs_timeout
   value: 360
 
 stages:
+# First stage checks if NuGet, df365.tools are installed and the needed packages as d365sqlpackage and d365AzCopy 
 - stage: Set_environments
   jobs:
   - job: set_VmA
@@ -46,8 +55,7 @@ stages:
     - task: PowerShell@2
       inputs:
         filePath: 'db_env_managment_scripts/install_env_dependencies.ps1'
-    
-
+# Second stage extract .bacpac db from VmA and upload it to blob azure storage    
 - stage: VmA_database_to_Azure_Storage
   jobs:
   - job: extract_and_upload
@@ -65,7 +73,7 @@ stages:
       inputs:
         arguments: '${{variables.extract_db_path}} ${{variables.db_name}} ${{variables.blob_url}}'
         filePath: 'db_env_managment_scripts/upload_db.ps1'
-
+# Third stage download .bacpac db from azure storage blob and imports it to VmB db
 - stage: VmB_import_database_from_Azure_Storage
   jobs:
   - job: download_and_import
