--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,7 +100,7 @@ stages:
  #       filePath: 'db_env_managment_scripts/export_db.ps1'
     - task: PowerShell@2
       inputs:
-        arguments: '${{variables.extract_db_path}} ${{variables.db_name}} ${{variables.blob_url}}'
+        arguments: "${{variables.extract_db_path}} ${{variables.db_name}} '${{variables.blob_url}}'"
         filePath: 'db_env_managment_scripts/upload_db.ps1'
 
 # Third stage download .bacpac db from azure storage blob and imports it to VmB db
