--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,4 @@
+variables:
 ###################################################################################################################################################
 # This variables should not be touched because after the import of db in VmB we will have two databases with those names as setted
 - name: db_d365fo_name
@@ -185,6 +186,11 @@ stages:
       inputs:
         arguments: '${{variables.db_backup_d365fo_name}}'
         filePath: ${{variables.script_rename_mdf_ldf.ps1}}
+    - task: PowerShell@2
+      inputs:
+        arguments: 'start'
+        filePath: ${{variables.script_start_stop_d365fo}}
+    
 
 
          
