--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -178,11 +178,11 @@ stages:
     - task: PowerShell@2
       inputs:
         arguments: '${{variables.db_d365fo_name}}'
-        filePath: 'db_env_managment_scripts/rename_mdf_ldf.ps1'
+        filePath: '${{variables.script_rename_mdf_ldf}}'
     - task: PowerShell@2
       inputs:
         arguments: '${{variables.db_backup_d365fo_name}}'
-        filePath: 'db_env_managment_scripts/rename_mdf_ldf.ps1'
+        filePath: '${{variables.script_rename_mdf_ldf}}'
     - task: PowerShell@2
       inputs:
         arguments: 'start'
