--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,13 @@
+###################################################################################################################################################
+# SCHEDULE EXECUTION
+schedules:
+- cron: "25 9 * * *"
+  displayName: Run At 00:00 on day-of-month 1
+#To run on a schedule PR and CI triggers must be disabled.
+pr: none
+trigger: none
+###################################################################################################################################################
+
 variables:
 ###################################################################################################################################################
 # This variables should not be touched because after the import of db in VmB we will have two databases with those names as setted
