--- a/user-command.yml
+++ b/user-command.yml
@@ -7,9 +7,7 @@ parameters:
 
 # ---------------------------------------------------------------------
 variables:
-# Name of agent-pool 
-- name: pool
-  value: "Users"
+   - template: variable-template.yml
 
 # ---------------------------------------------------------------------
 
